@@ -1,6 +1,7 @@
 installation-guide (2008xxxx) UNRELEASED; urgency=low
 
-  * 
+  [ Colin Watson ]
+  * Document partman/early_command (added in partman-base 129).
 
  -- Frans Pop <fjp@debian.org>  Wed, 10 Dec 2008 21:05:01 +0100
 
